--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 bin/
 
 # Generated files
-base-data/generated/*
-!base-data/generated/.gitkeep
+docker/generated/*
+!docker/generated/.gitkeep
 
 # Packaged chaincode
 chaincode.tar.gz
@@ -11,3 +11,6 @@ chaincode.tar.gz
 # Chaincode-related files
 chaincode/node_modules/
 chaincode/dist/
+
+# Docker container related files
+docker-data/
