--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,16 @@
 volumes:
-  orderer.example.com:
-  peer0.org1.example.com:
-  peer0.org2.example.com:
+  orderer.lejejs.com:
+  peer0.branch1.lejejs.com:
+  peer0.branch2.lejejs.com:
+  peer0.branch3.lejejs.com:
 
 networks:
-  test:
-    name: fabric_test
+  main_network:
+    name: removal_system_network
 
 services:
-  orderer.example.com:
-    container_name: orderer.example.com
+  orderer.lejejs.com:
+    container_name: orderer.lejejs.com
     image: hyperledger/fabric-orderer:latest
     labels:
       service: hyperledger-fabric
@@ -35,23 +36,22 @@ services:
       - ORDERER_ADMIN_TLS_ROOTCAS=[/var/hyperledger/orderer/tls/ca.crt]
       - ORDERER_ADMIN_TLS_CLIENTROOTCAS=[/var/hyperledger/orderer/tls/ca.crt]
       - ORDERER_ADMIN_LISTENADDRESS=0.0.0.0:7053
-      - ORDERER_OPERATIONS_LISTENADDRESS=orderer.example.com:9443
-      - ORDERER_METRICS_PROVIDER=prometheus
+      - ORDERER_OPERATIONS_LISTENADDRESS=orderer.lejejs.com:9443
     working_dir: /root
     command: orderer
     volumes:
-        - ./base-data/generated/ca/ordererOrganizations/example.com/orderers/orderer.example.com/msp:/var/hyperledger/orderer/msp
-        - ./base-data/generated/ca/ordererOrganizations/example.com/orderers/orderer.example.com/tls/:/var/hyperledger/orderer/tls
-        # - ./docker-data/orderer.example.com:/var/hyperledger/production/orderer
+        - ./docker/generated/ca/ordererOrganizations/lejejs.com/orderers/orderer.lejejs.com/msp:/var/hyperledger/orderer/msp
+        - ./docker/generated/ca/ordererOrganizations/lejejs.com/orderers/orderer.lejejs.com/tls:/var/hyperledger/orderer/tls
+        - ./docker-data/orderer.lejejs.com:/var/hyperledger/production/orderer
     ports:
       - 7050:7050
       - 7053:7053
       - 9443:9443
     networks:
-      - test
+      - main_network
 
-  peer0.org1.example.com:
-    container_name: peer0.org1.example.com
+  peer0.branch1.lejejs.com:
+    container_name: peer0.branch1.lejejs.com
     image: hyperledger/fabric-peer:latest
     labels:
       service: hyperledger-fabric
@@ -65,37 +65,36 @@ services:
       - CORE_PEER_TLS_KEY_FILE=/etc/hyperledger/fabric/tls/server.key
       - CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/fabric/tls/ca.crt
       # Peer specific variables
-      - CORE_PEER_ID=peer0.org1.example.com
-      - CORE_PEER_ADDRESS=peer0.org1.example.com:7051
+      - CORE_PEER_ID=peer0.branch1.lejejs.com
+      - CORE_PEER_ADDRESS=peer0.branch1.lejejs.com:7051
       - CORE_PEER_LISTENADDRESS=0.0.0.0:7051
-      - CORE_PEER_CHAINCODEADDRESS=peer0.org1.example.com:7052
+      - CORE_PEER_CHAINCODEADDRESS=peer0.branch1.lejejs.com:7052
       - CORE_PEER_CHAINCODELISTENADDRESS=0.0.0.0:7052
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org1.example.com:7051
-      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org1.example.com:7051
-      - CORE_PEER_LOCALMSPID=Org1MSP
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.branch1.lejejs.com:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.branch1.lejejs.com:7051
+      - CORE_PEER_LOCALMSPID=Branch1MSP
       - CORE_PEER_MSPCONFIGPATH=/etc/hyperledger/fabric/msp
-      - CORE_OPERATIONS_LISTENADDRESS=peer0.org1.example.com:9444
-      - CORE_METRICS_PROVIDER=prometheus
-      - CHAINCODE_AS_A_SERVICE_BUILDER_CONFIG={"peername":"peer0org1"}
+      - CORE_OPERATIONS_LISTENADDRESS=peer0.branch1.lejejs.com:9444
+      - CHAINCODE_AS_A_SERVICE_BUILDER_CONFIG={"peername":"peer0branch1"}
       - CORE_CHAINCODE_EXECUTETIMEOUT=300s
       #Generic peer variables
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
-      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=fabric_test
+      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=removal_system_network
     volumes:
-      - ./peercfg:/etc/hyperledger/peercfg
+      - ./docker/channel-config:/etc/hyperledger/peercfg
       - /var/run/docker.sock:/host/var/run/docker.sock
-      - ./base-data/generated/ca/peerOrganizations/org1.example.com/peers/peer0.org1.example.com:/etc/hyperledger/fabric
-      # - ./docker-data/peer0.org1.example.com:/var/hyperledger/production
+      - ./docker/generated/ca/peerOrganizations/branch1.lejejs.com/peers/peer0.branch1.lejejs.com:/etc/hyperledger/fabric
+      - ./docker-data/peer0.branch1.lejejs.com:/var/hyperledger/production
     working_dir: /root
     command: peer node start
     ports:
       - 7051:7051
       - 9444:9444
     networks:
-      - test
+      - main_network
 
-  peer0.org2.example.com:
-    container_name: peer0.org2.example.com
+  peer0.branch2.lejejs.com:
+    container_name: peer0.branch2.lejejs.com
     image: hyperledger/fabric-peer:latest
     labels:
       service: hyperledger-fabric
@@ -109,31 +108,73 @@ services:
       - CORE_PEER_TLS_KEY_FILE=/etc/hyperledger/fabric/tls/server.key
       - CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/fabric/tls/ca.crt
       # Peer specific variables
-      - CORE_PEER_ID=peer0.org2.example.com
-      - CORE_PEER_ADDRESS=peer0.org2.example.com:9051
+      - CORE_PEER_ID=peer0.branch2.lejejs.com
+      - CORE_PEER_ADDRESS=peer0.branch2.lejejs.com:9051
       - CORE_PEER_LISTENADDRESS=0.0.0.0:9051
-      - CORE_PEER_CHAINCODEADDRESS=peer0.org2.example.com:9052
+      - CORE_PEER_CHAINCODEADDRESS=peer0.branch2.lejejs.com:9052
       - CORE_PEER_CHAINCODELISTENADDRESS=0.0.0.0:9052
-      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org2.example.com:9051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org2.example.com:9051
-      - CORE_PEER_LOCALMSPID=Org2MSP
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.branch2.lejejs.com:9051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.branch2.lejejs.com:9051
+      - CORE_PEER_LOCALMSPID=Branch2MSP
       - CORE_PEER_MSPCONFIGPATH=/etc/hyperledger/fabric/msp
-      - CORE_OPERATIONS_LISTENADDRESS=peer0.org2.example.com:9445
-      - CORE_METRICS_PROVIDER=prometheus
-      - CHAINCODE_AS_A_SERVICE_BUILDER_CONFIG={"peername":"peer0org2"}
+      - CORE_OPERATIONS_LISTENADDRESS=peer0.branch2.lejejs.com:9445
+      - CHAINCODE_AS_A_SERVICE_BUILDER_CONFIG={"peername":"branch2"}
       - CORE_CHAINCODE_EXECUTETIMEOUT=300s
       #Generic peer variables
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
-      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=fabric_test
+      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=removal_system_network
     volumes:
-      - ./peercfg:/etc/hyperledger/peercfg
+      - ./docker/channel-config:/etc/hyperledger/peercfg
       - /var/run/docker.sock:/host/var/run/docker.sock
-      - ./base-data/generated/ca/peerOrganizations/org2.example.com/peers/peer0.org2.example.com:/etc/hyperledger/fabric
-      # - ./docker-data/peer0.org2.example.com:/var/hyperledger/production
+      - ./docker/generated/ca/peerOrganizations/branch2.lejejs.com/peers/peer0.branch2.lejejs.com:/etc/hyperledger/fabric
+      - ./docker-data/peer0.branch2.lejejs.com:/var/hyperledger/production
     working_dir: /root
     command: peer node start
     ports:
       - 9051:9051
       - 9445:9445
     networks:
-      - test
+      - main_network
+
+  peer0.branch3.lejejs.com:
+    container_name: peer0.branch3.lejejs.com
+    image: hyperledger/fabric-peer:latest
+    labels:
+      service: hyperledger-fabric
+    environment:
+      - FABRIC_CFG_PATH=/etc/hyperledger/peercfg
+      - FABRIC_LOGGING_SPEC=INFO
+      #- FABRIC_LOGGING_SPEC=DEBUG
+      - CORE_PEER_TLS_ENABLED=true
+      - CORE_PEER_PROFILE_ENABLED=false
+      - CORE_PEER_TLS_CERT_FILE=/etc/hyperledger/fabric/tls/server.crt
+      - CORE_PEER_TLS_KEY_FILE=/etc/hyperledger/fabric/tls/server.key
+      - CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/fabric/tls/ca.crt
+      # Peer specific variables
+      - CORE_PEER_ID=peer0.branch3.lejejs.com
+      - CORE_PEER_ADDRESS=peer0.branch3.lejejs.com:11051
+      - CORE_PEER_LISTENADDRESS=0.0.0.0:11051
+      - CORE_PEER_CHAINCODEADDRESS=peer0.branch3.lejejs.com:11052
+      - CORE_PEER_CHAINCODELISTENADDRESS=0.0.0.0:11052
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.branch3.lejejs.com:11051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.branch3.lejejs.com:11051
+      - CORE_PEER_LOCALMSPID=Branch3MSP
+      - CORE_PEER_MSPCONFIGPATH=/etc/hyperledger/fabric/msp
+      - CORE_OPERATIONS_LISTENADDRESS=peer0.branch3.lejejs.com:9446
+      - CHAINCODE_AS_A_SERVICE_BUILDER_CONFIG={"peername":"branch3"}
+      - CORE_CHAINCODE_EXECUTETIMEOUT=300s
+      #Generic peer variables
+      - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
+      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=removal_system_network
+    volumes:
+      - ./docker/channel-config:/etc/hyperledger/peercfg
+      - /var/run/docker.sock:/host/var/run/docker.sock
+      - ./docker/generated/ca/peerOrganizations/branch3.lejejs.com/peers/peer0.branch3.lejejs.com:/etc/hyperledger/fabric
+      - ./docker-data/peer0.branch3.lejejs.com:/var/hyperledger/production
+    working_dir: /root
+    command: peer node start
+    ports:
+      - 11051:11051
+      - 9446:9446
+    networks:
+      - main_network
