--- a/docker/channel-config/core.yaml
+++ b/docker/channel-config/core.yaml
@@ -1,7 +1,6 @@
-# Copyright IBM Corp. All Rights Reserved.
-#
-# SPDX-License-Identifier: Apache-2.0
-#
+# Default core.yaml configuration file for Hyperledger Fabric.
+# Retrieved from https://github.com/hyperledger/fabric-samples
+
 
 ###############################################################################
 #
