--- a/docker/channel-config/orderer.yaml
+++ b/docker/channel-config/orderer.yaml
@@ -1,9 +1,7 @@
-# Copyright IBM Corp. All Rights Reserved.
-#
-# SPDX-License-Identifier: Apache-2.0
-#
+# Default core.yaml configuration file for Hyperledger Fabric.
+# Retrieved from https://github.com/hyperledger/fabric-samples
 
----
+
 ################################################################################
 #
 #   Orderer Configuration
